{
  "version": 4,
  "terraform_version": "1.4.4",
  "serial": 10,
  "lineage": "e3463b14-ea0a-851f-0267-6b6f67380d40",
  "resources": [
    {
      "module": "module.app1_ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "module.app1_ec2.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fa1de1d60de6a97e",
            "arn": "arn:aws:ec2:us-east-1:265915233350:instance/i-02086825b415e2647",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1e",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02086825b415e2647",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "app1-prod-keyname",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-049b19f01b8398279",
            "private_dns": "ip-10-10-10-215.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.10.10.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0e7019018c64150c9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e168805b7972416e",
            "tags": {
              "Name": "app1-prod-servername"
            },
            "tags_all": {
              "Name": "app1-prod-servername"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0af871254db7a1012"
            ]
          },
          "dependencies": [
            "module.app1_ec2.aws_key_pair.mykey",
            "module.app1_vpc.aws_security_group.mysg",
            "module.app1_vpc.aws_subnet.mysubnet",
            "module.app1_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app1_vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myigw",
      "provider": "module.app1_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:internet-gateway/igw-0f5e0f19eb9dae5d5",
            "id": "igw-0f5e0f19eb9dae5d5",
            "owner_id": "265915233350",
            "tags": {
              "Name": "app1-prod-igw"
            },
            "tags_all": {
              "Name": "app1-prod-igw"
            },
            "vpc_id": "vpc-015ccc2a1eea8e0d1"
          },
          "dependencies": [
            "module.app1_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app1_vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myroute",
      "provider": "module.app1_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:route-table/rtb-0720e59f5ff0965ea",
            "id": "rtb-0720e59f5ff0965ea",
            "owner_id": "265915233350",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f5e0f19eb9dae5d5",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "app1-prod-route"
            },
            "tags_all": {
              "Name": "app1-prod-route"
            },
            "timeouts": null,
            "vpc_id": "vpc-015ccc2a1eea8e0d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app1_vpc.aws_internet_gateway.myigw",
            "module.app1_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app1_vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "myrouteassoc",
      "provider": "module.app1_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1224c6328d28322",
            "route_table_id": "rtb-0720e59f5ff0965ea",
            "subnet_id": "subnet-0e168805b7972416e"
          },
          "dependencies": [
            "module.app1_vpc.aws_internet_gateway.myigw",
            "module.app1_vpc.aws_route_table.myroute",
            "module.app1_vpc.aws_subnet.mysubnet",
            "module.app1_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app1_vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "mysg",
      "provider": "module.app1_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:security-group/sg-0af871254db7a1012",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0af871254db7a1012",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "TLS from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "app1-prod-sg",
            "name_prefix": "",
            "owner_id": "265915233350",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "app1-prod-sg"
            },
            "tags_all": {
              "Name": "app1-prod-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-015ccc2a1eea8e0d1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app1_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app1_vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "mysubnet",
      "provider": "module.app1_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:subnet/subnet-0e168805b7972416e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1e",
            "availability_zone_id": "use1-az3",
            "cidr_block": "10.10.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e168805b7972416e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "265915233350",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app1-prod-subnet"
            },
            "tags_all": {
              "Name": "app1-prod-subnet"
            },
            "vpc_id": "vpc-015ccc2a1eea8e0d1"
          },
          "dependencies": [
            "module.app1_vpc.aws_vpc.myvpc"
          ]
        }
      ]
    },
    {
      "module": "module.app1_vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myvpc",
      "provider": "module.app1_vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:265915233350:vpc/vpc-015ccc2a1eea8e0d1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0d5ffd5989f1ab28d",
            "default_route_table_id": "rtb-0cdeb357afc2e514a",
            "default_security_group_id": "sg-09e944f2e283c3967",
            "dhcp_options_id": "dopt-04590a6010ca641a1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-015ccc2a1eea8e0d1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cdeb357afc2e514a",
            "owner_id": "265915233350",
            "tags": {
              "Name": "app1-prod-vpc"
            },
            "tags_all": {
              "Name": "app1-prod-vpc"
            }
          }
        }
      ]
    }
  ]
}